# knn-clas

./: .gitignore  CMakeLists.txt  README.md  tree.txt
data/: spirals_knn_predicted.pb  spirals_knn_support.pb  spirals_nn_predicted.pb  spirals_nn_support.pb  spirals_predicted.pb  spirals_support.pb  spirals_test.pb  spirals_train.pb
data/input/: test_samples.pb  train_dataset.pb
equivalence_analysis/: equivalence_analysis.py  log.txt  model_validation.py  store_sets.py
equivalence_analysis/report/: equiv_analysis.bib  equiv_analysis.tex
include/: bimap.hpp  classifier.pb.h  computeSSs.hpp  computeSVs.hpp  defdirs.hpp  filter.hpp  gabrielGraph.hpp  isgabrielEdge.hpp  kNSSpred.hpp  nearestSSpred.hpp  nearestSVlabel.hpp  nearestSVpred.hpp  readFiles.hpp  types.hpp  writeFiles.hpp
include/nn-clas/: filenameHelpers.hpp  nearestSVlabel.hpp  squaredDistance.hpp  types.hpp
likelihood_analysis/: likelihood_analysis.ipynb  likelihood_analysis.py  store_sets.py
likelihood_analysis/output/: input_space_statistics.json  likelihood_space_metrics.json  spatial_results.json  statistical_results.json
proto/: classifier.proto  compile.sh
report/: KNN-CLAS.tex  knn-clas.TeX
scripts/: classifier_pb2.py  compare.py  compare_real.py  compare_spirals.py  evaluate_real.py  generate.py  load_proto.py  make_latex_table.py  plot.py  prepare.py  prepare_real.py  real_compare.py  real_likelihoods.py  real_make_latex_table.py  real_prepare.py  run.py  run_and_measure_time.sh  spirals_run.py  store_proto.py  validate_prepare.py  validate_run.py
scripts/comparison_results/: accuracy.tex  real_sets.csv  real_sets_results.tex  real_sets_results_accuracy.tex  real_sets_results_support.tex  real_sets_results_timing.tex  setsmetadata.csv  setsresults.csv  setsresults_accuracy.tex  setsresults_metadata.tex  setsresults_statistics.tex  setsresults_support.tex  setsresults_timing.tex  statistics.tex  support.tex  timing.tex
source/: CMakeLists.txt  classifier.pb.cc  classifier.proto  computeSVs.hpp  defdirs.hpp  filenameHelpers.cpp  filter.cpp  filter.hpp  isgabrielEdge.hpp  nearestSVlabel.cpp  readFiles.cpp  readFiles.hpp  squaredDistance.cpp  types.cpp  writeFiles.cpp  writeFiles.hpp
src/app/: CMakeLists.txt  fit.cpp  label.cpp  pred.cpp  train.cpp
src/common/: CMakeLists.txt  bimap.cpp  classifier.pb.cc  computeSSs.cpp  computeSVs.cpp  filter.cpp  gabrielGraph.cpp  isgabrielEdge.cpp  kNSSpred.cpp  nearestSSpred.cpp  nearestSVlabel.cpp  nearestSVpred.cpp  readFiles.cpp  types.cpp  writeFiles.cpp
src/knn-clas/: CMakeLists.txt  kNSSlikelihood.hpp  kNSSpred.cpp  kNSSpred.hpp  kNSSvoting.cpp  kNSSvoting.hpp  knn-fit.cpp  pred.cpp
src/knn-clas/likelihoods/: CMakeLists.txt  kNSSlikelihood.cpp  kNSSlikelihood.hpp  knn-like.cpp
src/nn-clas/: CMakeLists.txt  nearestSSpred.cpp  nn-fit.cpp  pred.cpp
src/proto/: CMakeLists.txt  classifier.pb.h
